Bug 179019 - Dolphin crashes when using "Show in Groups" and sorting files by Date (ASSERT "false" in dolphinmodel.cpp:237)
Summary: Dolphin crashes when using "Show in Groups" and sorting files by Date (ASSERT...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 179103 179126 179200 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-12-29 05:30 UTC by mic
Modified: 2009-05-25 22:00 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Proposed patch + (fixing 6 weeks months (like March2009)) (1.38 KB, patch)
2008-12-30 13:28 UTC, Dario Andres
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mic 2008-12-29 05:30:22 UTC
Version:            (using Devel)
Compiler:          gcc version 4.3.2 (Debian 4.3.2-1)
 
OS:                Linux
Installed from:    Compiled sources

dolphin drops when you start

in console:
dolphin                                                                                                                                  /home/mic
dolphin(28158): Attempt to use QAction "close_tab" with KXMLGUIFactory!
dolphin(28158): Attempt to use QAction "show_info_panel" with KXMLGUIFactory!
dolphin(28158): Attempt to use QAction "show_folders_panel" with KXMLGUIFactory!
dolphin(28158): Attempt to use QAction "show_terminal_panel" with KXMLGUIFactory!
dolphin(28158): Attempt to use QAction "show_places_panel" with KXMLGUIFactory!
dolphin(28158) MetaDataWidget::setFile: KUrl("file:///home/mic")
mic [dolphin] ~                                                                                                                                 7:20
mic 1770: dolphin(28158) MetaDataWidget::setFile: KUrl("file:///home/mic")                                                                         /home/mic
ASSERT: "false" in file ../../../../apps/dolphin/src/dolphinmodel.cpp, line 237
KCrash: Application 'dolphin' crashing...
sock_file=/home/mic/.kde4/socket-mic/kdeinit4__0


in crash hendler: http://pastebin.ru/300046
Comment 1 FiNeX 2008-12-29 11:32:43 UTC
Please, paste backtraces directly on bugzilla.






 
<?php
Приложение: Dolphin (dolphin), сигнал SIGABRT
0x00007fc7af1c3ff1 in nanosleep () from /lib/libc.so.6

Thread 1 (Thread 0x7fc7b28d16f0 (LWP 28158)):
[KCrash Handler]
#5  0x00007fc7af157ed5 in raise () from /lib/libc.so.6
#6  0x00007fc7af1593f3 in abort () from /lib/libc.so.6
#7  0x00007fc7af7e95a5 in qt_message_output (msgType=QtFatalMsg, buf=<value
optimized out>) at global/qglobal.cpp:2102
#8  0x00007fc7af7e96e7 in qFatal (msg=<value optimized out>) at
global/qglobal.cpp:2303
#9  0x00007fc7b1c0a60b in DolphinModel::displayRoleData (this=<value optimized
out>, index=<value optimized out>) at
../../../../apps/dolphin/src/dolphinmodel.cpp:237
#10 0x00007fc7b1c0a8fd in DolphinModel::data (this=0x6dfe, index=@0x6, role=-1)
at ../../../../apps/dolphin/src/dolphinmodel.cpp:66
#11 0x00007fc7b0278423 in QSortFilterProxyModel::data (this=<value optimized
out>, index=@0x7fffbaa06bd0, role=399415562) at
itemviews/qsortfilterproxymodel.cpp:1505
#12 0x00007fc7b10124aa in KCategorizedView::rowsInsertedArtifficial
(this=0x20fb700, parent=<value optimized out>, start=<value optimized out>,
end=<value optimized out>)
    at ../../kdeui/itemviews/kcategorizedview.cpp:1549
#13 0x00007fc7b100c37d in KCategorizedView::rowsInserted (this=0x20fb700,
parent=@0x7fffbaa06f50, start=0, end=115) at
../../kdeui/itemviews/kcategorizedview.cpp:1504
#14 0x00007fc7b100bd6e in KCategorizedView::qt_metacall (this=0x20fb700,
_c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffbaa06f20)
at ./kcategorizedview.moc:81
#15 0x00007fc7b1c02f85 in DolphinIconsView::qt_metacall (this=0x6dfe, _c=28158,
_id=6, _a=0xffffffffffffffff) at ./dolphiniconsview.moc:70
#16 0x00007fc7af8ed6e4 in QMetaObject::activate (sender=0x20f8f00,
from_signal_index=<value optimized out>, to_signal_index=9,
argv=0xffffffffffffffff) at kernel/qobject.cpp:3031
#17 0x00007fc7af9234c4 in QAbstractItemModel::rowsInserted (this=0x6dfe,
_t1=<value optimized out>, _t2=0, _t3=115) at
.moc/release-shared/moc_qabstractitemmodel.cpp:157
#18 0x00007fc7af8d00f5 in QAbstractItemModel::endInsertRows (this=0x20f8f00) at
kernel/qabstractitemmodel.cpp:2092
#19 0x00007fc7b027a40d in QSortFilterProxyModelPrivate::insert_source_items
(this=0x20f8f40, source_to_proxy=@0x20fdcd0, proxy_to_source=@0x20fdcc0,
source_items=<value optimized out>, 
    source_parent=<value optimized out>, orient=Qt::Vertical, emit_signal=true)
at itemviews/qsortfilterproxymodel.cpp:585
#20 0x00007fc7b027eb1e in QSortFilterProxyModelPrivate::source_items_inserted
(this=0x20f8f40, source_parent=@0x7fffbaa072c0, start=116, end=115,
orient=Qt::Vertical)
    at itemviews/qsortfilterproxymodel.cpp:680
#21 0x00007fc7b027fc7a in QSortFilterProxyModel::qt_metacall (this=0x20f8f00,
_c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffbaa07290)
    at .moc/release-shared/moc_qsortfilterproxymodel.cpp:125
#22 0x00007fc7b1c0b0fd in DolphinSortFilterProxyModel::qt_metacall (this=0x6dfe,
_c=28158, _id=6, _a=0xffffffffffffffff) at ./dolphinsortfilterproxymodel.moc:61
#23 0x00007fc7af8ed6e4 in QMetaObject::activate (sender=0x20f2c90,
from_signal_index=<value optimized out>, to_signal_index=9,
argv=0xffffffffffffffff) at kernel/qobject.cpp:3031
#24 0x00007fc7af9234c4 in QAbstractItemModel::rowsInserted (this=0x6dfe,
_t1=<value optimized out>, _t2=0, _t3=115) at
.moc/release-shared/moc_qabstractitemmodel.cpp:157
#25 0x00007fc7af8d00f5 in QAbstractItemModel::endInsertRows (this=0x20f2c90) at
kernel/qabstractitemmodel.cpp:2092
#26 0x00007fc7b244698e in KDirModelPrivate::_k_slotNewItems (this=0x20a6e70,
directoryUrl=<value optimized out>, items=@0x20b0a30) at
../../kio/kio/kdirmodel.cpp:432
#27 0x00007fc7b24478ba in KDirModel::qt_metacall (this=0x20f2c90,
_c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffbaa07820)
at ./kdirmodel.moc:77
#28 0x00007fc7af8ed6e4 in QMetaObject::activate (sender=0x20f2cf0,
from_signal_index=<value optimized out>, to_signal_index=14,
argv=0xffffffffffffffff) at kernel/qobject.cpp:3031
#29 0x00007fc7b242ac7a in KDirLister::itemsAdded (this=0x6dfe, _t1=<value
optimized out>, _t2=<value optimized out>) at ./kdirlister.moc:266
#30 0x00007fc7b242bb2b in KDirLister::Private::emitItems (this=0x20f2ed0) at
../../kio/kio/kdirlister.cpp:2239
#31 0x00007fc7b242e8de in KDirListerCache::slotEntries (this=0x20449d0,
job=<value optimized out>, entries=@0x21368c8) at
../../kio/kio/kdirlister.cpp:1048
#32 0x00007fc7b243c84b in KDirListerCache::qt_metacall (this=0x20449d0,
_c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffbaa07ba0)
at ./kdirlister_p.moc:97
#33 0x00007fc7af8ed6e4 in QMetaObject::activate (sender=0x2136780,
from_signal_index=<value optimized out>, to_signal_index=40,
argv=0xffffffffffffffff) at kernel/qobject.cpp:3031
#34 0x00007fc7b2404eb4 in KIO::ListJob::entries (this=0x6dfe, _t1=0x2136780,
_t2=<value optimized out>) at ./jobclasses.moc:763
#35 0x00007fc7b2410326 in KIO::ListJobPrivate::slotListEntries (this=0x2136e50,
list=@0x7fffbaa08130) at ../../kio/kio/job.cpp:2341
#36 0x00007fc7b2410496 in KIO::ListJob::qt_metacall (this=0x2136780,
_c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffbaa07f10)
at ./jobclasses.moc:750
#37 0x00007fc7af8ed6e4 in QMetaObject::activate (sender=0x221d820,
from_signal_index=<value optimized out>, to_signal_index=10,
argv=0xffffffffffffffff) at kernel/qobject.cpp:3031
#38 0x00007fc7b24ca9a5 in KIO::SlaveInterface::listEntries (this=0x6dfe,
_t1=<value optimized out>) at ./slaveinterface.moc:177
#39 0x00007fc7b24ce1df in KIO::SlaveInterface::dispatch (this=0x221d820,
_cmd=<value optimized out>, rawdata=@0x129) at
../../kio/kio/slaveinterface.cpp:193
#40 0x00007fc7b24cad72 in KIO::SlaveInterface::dispatch (this=0x221d820) at
../../kio/kio/slaveinterface.cpp:91
#41 0x00007fc7b24bcf73 in KIO::Slave::gotInput (this=0x221d820) at
../../kio/kio/slave.cpp:322
#42 0x00007fc7b24bdfa8 in KIO::Slave::qt_metacall (this=0x221d820,
_c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7fffbaa08300) at ./slave.moc:75
#43 0x00007fc7af8ed6e4 in QMetaObject::activate (sender=0x221da30,
from_signal_index=<value optimized out>, to_signal_index=4,
argv=0xffffffffffffffff) at kernel/qobject.cpp:3031
#44 0x00007fc7b23d9340 in KIO::ConnectionPrivate::dequeue (this=0x1f787d0) at
../../kio/kio/connection.cpp:82
#45 0x00007fc7b23d947a in KIO::Connection::qt_metacall (this=0x221da30,
_c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x1f79770) at ./connection.moc:72
#46 0x00007fc7af8e8355 in QObject::event (this=0x221da30, e=0x222cdc0) at
kernel/qobject.cpp:1155
#47 0x00007fc7afd8ba5d in QApplicationPrivate::notify_helper (this=0x1ed9530,
receiver=0x221da30, e=0x222cdc0) at kernel/qapplication.cpp:3803
#48 0x00007fc7afd937da in QApplication::notify (this=0x7fffbaa08d50,
receiver=0x221da30, e=0x222cdc0) at kernel/qapplication.cpp:3768
#49 0x00007fc7b1026f6b in KApplication::notify (this=0x7fffbaa08d50,
receiver=0x221da30, event=0x222cdc0) at ../../kdeui/kernel/kapplication.cpp:307
#50 0x00007fc7af8d9391 in QCoreApplication::notifyInternal (this=0x7fffbaa08d50,
receiver=0x221da30, event=0x222cdc0) at kernel/qcoreapplication.cpp:587
#51 0x00007fc7af8da02a in QCoreApplicationPrivate::sendPostedEvents
(receiver=0x0, event_type=0, data=0x1ebae40) at
../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:209
#52 0x00007fc7af901a93 in postEventSourceDispatch (s=<value optimized out>) at
../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:214
#53 0x00007fc7abd3eaab in g_main_context_dispatch () from
/usr/lib/libglib-2.0.so.0
#54 0x00007fc7abd4226d in ?? () from /usr/lib/libglib-2.0.so.0
#55 0x00007fc7abd4242b in g_main_context_iteration () from
/usr/lib/libglib-2.0.so.0
#56 0x00007fc7af90171f in QEventDispatcherGlib::processEvents (this=0x1ed99e0,
flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:319
#57 0x00007fc7afe1d47f in QGuiEventDispatcherGlib::processEvents (this=0x6dfe,
flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:198
#58 0x00007fc7af8d7cb2 in QEventLoop::processEvents (this=<value optimized out>,
flags={i = -1163883392}) at kernel/qeventloop.cpp:143
#59 0x00007fc7af8d7e3d in QEventLoop::exec (this=0x7fffbaa08cc0, flags={i =
-1163883312}) at kernel/qeventloop.cpp:194
#60 0x00007fc7af8da2ed in QCoreApplication::exec () at
kernel/qcoreapplication.cpp:845
#61 0x000000000044376d in main (argc=1, argv=0x7fffbaa09238) at
../../../../apps/dolphin/src/main.cpp:94
?> 
Comment 2 mic 2008-12-29 17:39:05 UTC
after rm -rf .kde4/share/apps/dolphin and rm -rf .kde4/share/config/dolphinrc
it's ok. bat if "show in groups" is on - dolphin drops. without "show in groups" - drops working well.
dolphin Version: 4:4.1.86+svn902162-0r1
debian amd64
Comment 3 Dario Andres 2008-12-30 12:51:33 UTC
*** Bug 179103 has been marked as a duplicate of this bug. ***
Comment 4 Dario Andres 2008-12-30 13:06:23 UTC
Confirming.

This happens when using "Show in Groups" (only in Icon mode) + "Sort by Date" if you have files from some weeks ago. It seems like the weeknumber detecting code has some flaw.
Comment 5 Dario Andres 2008-12-30 13:13:38 UTC
Also, this only happens in this dates as:

30 December 2008 is "Week 1" (of 2009 , but for 2008 too)
28 December 2008 is "Week 52" (of 2008)

(this year have "53 weeks")

so having I file created/modified in the earlier December, does the comparision (week 1 - week (49-52) ) and fails.

---

http://doc.trolltech.com/4.4/qdate.html#weekNumber

As stated there, the weekNumber can also provide the year of the week number.
I'll try to get a patch :)
Comment 6 Dario Andres 2008-12-30 13:28:50 UTC
Created attachment 29758 [details]
Proposed patch + (fixing 6 weeks months (like March2009))
Comment 7 Dario Andres 2008-12-30 15:04:13 UTC
*** Bug 179126 has been marked as a duplicate of this bug. ***
Comment 8 Peter Penz 2008-12-30 15:48:23 UTC
SVN commit 903432 by ppenz:

fixed crash when enabling grouping by date and having dates like
30 December 2008 (is "Week 1" (of 2009 , but for 2008 too))
28 December 2008 (is "Week 52" (of 2008) )

Thanks to Darío Andrés for the patch!

BUG: 179019

 M  +13 -2     dolphinmodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=903432
Comment 9 S. Burmeister 2008-12-30 16:38:28 UTC
Works for me. Thanks for the quick fix!
Comment 10 Dario Andres 2008-12-31 13:31:24 UTC
*** Bug 179200 has been marked as a duplicate of this bug. ***
Comment 11 Jacopo De Simoi 2008-12-31 15:28:34 UTC
Fixed for me!
Comment 12 Dmitry Suzdalev 2009-05-07 17:59:10 UTC
It is now again reproducible for me with today's trunk (r964672):

To reproduce I just enter my ~/tmp folder which has show in groups enabled and sorts by date.

Backtrace is the following:
Application: Dolphin (dolphin), signal: Aborted
[KCrash Handler]
#6  0xb7f3f424 in __kernel_vsyscall ()
#7  0xb64f9790 in raise () from /lib/libc.so.6
#8  0xb64fb0c8 in abort () from /lib/libc.so.6
#9  0xb67b0525 in qt_message_output (msgType=QtFatalMsg, buf=0x9fea888 "ASSERT: \"false\" in file /home/archuser/kdesvn/kdebase/apps/dolphin/src/dolphinmodel.cpp, line 247")
    at global/qglobal.cpp:2017
#10 0xb67b05e7 in qFatal (msg=0xb68e32f8 "ASSERT: \"%s\" in file %s, line %d") at global/qglobal.cpp:2216
#11 0xb67b06a5 in qt_assert (assertion=0xb7b982f4 "false", file=0xb7b982b4 "/home/archuser/kdesvn/kdebase/apps/dolphin/src/dolphinmodel.cpp", line=247) at global/qglobal.cpp:1786
#12 0xb7b63dd7 in DolphinModel::displayRoleData (this=0x9e84da8, index=@0xbff5a960) at /home/archuser/kdesvn/kdebase/apps/dolphin/src/dolphinmodel.cpp:247
#13 0xb7b64b39 in DolphinModel::data (this=0x9e84da8, index=@0xbff5a960, role=399415562) at /home/archuser/kdesvn/kdebase/apps/dolphin/src/dolphinmodel.cpp:66
#14 0xb7009c5c in QSortFilterProxyModel::data (this=0x9e84fa0, index=@0xbff5aa0c, role=399415562) at itemviews/qsortfilterproxymodel.cpp:1589
#15 0xb75f9806 in KCategorizedView::rowsInsertedArtifficial (this=0x9e8dd68, parent=@0xbff5ac54, start=0, end=35) at /home/archuser/kdesvn/kdelibs/kdeui/itemviews/kcategorizedview.cpp:1532
#16 0xb75f6815 in KCategorizedView::rowsInserted (this=0x9e8dd68, parent=@0xbff5ac54, start=0, end=35) at /home/archuser/kdesvn/kdelibs/kdeui/itemviews/kcategorizedview.cpp:1504
#17 0xb75f621d in KCategorizedView::qt_metacall (this=0x9e8dd68, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0xbff5ac14) at /home/archuser/kdesvn/build/kdelibs/kdeui/kcategorizedview.moc:82
#18 0xb7b5859e in DolphinIconsView::qt_metacall (this=0x9e8dd68, _c=QMetaObject::InvokeMetaMethod, _id=71, _a=0xbff5ac14)
    at /home/archuser/kdesvn/build/kdebase/apps/dolphin/src/dolphiniconsview.moc:71
#19 0xb68aab08 in QMetaObject::activate (sender=0x9e84fa0, from_signal_index=9, to_signal_index=9, argv=0xbff5ac14) at kernel/qobject.cpp:3108
#20 0xb68ab0e2 in QMetaObject::activate (sender=0x9e84fa0, m=0xb6942658, local_signal_index=5, argv=0xbff5ac14) at kernel/qobject.cpp:3185
#21 0xb68e1a2f in QAbstractItemModel::rowsInserted (this=0x9e84fa0, _t1=@0xbff5ac54, _t2=0, _t3=35) at .moc/release-shared/moc_qabstractitemmodel.cpp:159
#22 0xb6893193 in QAbstractItemModel::endInsertRows (this=0x9e84fa0) at kernel/qabstractitemmodel.cpp:2081
#23 0xb700bfeb in QSortFilterProxyModelPrivate::insert_source_items (this=0x9e90e80, source_to_proxy=@0x9e910f8, proxy_to_source=@0x9e910f0, source_items=@0xbff5ad84, source_parent=@0xbff5af14, 
    orient=Qt::Vertical, emit_signal=true) at itemviews/qsortfilterproxymodel.cpp:617
#24 0xb7010352 in QSortFilterProxyModelPrivate::source_items_inserted (this=0x9e90e80, source_parent=@0xbff5af14, start=36, end=35, orient=Qt::Vertical) at itemviews/qsortfilterproxymodel.cpp:713
#25 0xb701054f in QSortFilterProxyModelPrivate::_q_sourceRowsInserted (this=0x9e90e80, source_parent=@0xbff5af14, start=0, end=35) at itemviews/qsortfilterproxymodel.cpp:1152
#26 0xb70113cf in QSortFilterProxyModel::qt_metacall (this=0x9e84fa0, _c=QMetaObject::InvokeMetaMethod, _id=11, _a=0xbff5aed4) at .moc/release-shared/moc_qsortfilterproxymodel.cpp:126
#27 0xb7b65f6e in DolphinSortFilterProxyModel::qt_metacall (this=0x9e84fa0, _c=QMetaObject::InvokeMetaMethod, _id=32, _a=0xbff5aed4)
    at /home/archuser/kdesvn/build/kdebase/apps/dolphin/src/dolphinsortfilterproxymodel.moc:62
#28 0xb68aab08 in QMetaObject::activate (sender=0x9e84da8, from_signal_index=9, to_signal_index=9, argv=0xbff5aed4) at kernel/qobject.cpp:3108
#29 0xb68ab0e2 in QMetaObject::activate (sender=0x9e84da8, m=0xb6942658, local_signal_index=5, argv=0xbff5aed4) at kernel/qobject.cpp:3185
#30 0xb68e1a2f in QAbstractItemModel::rowsInserted (this=0x9e84da8, _t1=@0xbff5af14, _t2=0, _t3=35) at .moc/release-shared/moc_qabstractitemmodel.cpp:159
#31 0xb6893193 in QAbstractItemModel::endInsertRows (this=0x9e84da8) at kernel/qabstractitemmodel.cpp:2081
#32 0xb7dc1306 in KDirModelPrivate::_k_slotNewItems (this=0x9e8b728, directoryUrl=@0x9fb0b50, items=@0x9fb0b58) at /home/archuser/kdesvn/kdelibs/kio/kio/kdirmodel.cpp:433
#33 0xb7dc14ef in KDirModel::qt_metacall (this=0x9e84da8, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0xbff5b128) at /home/archuser/kdesvn/build/kdelibs/kio/kdirmodel.moc:82
#34 0xb68aab08 in QMetaObject::activate (sender=0x9e8d130, from_signal_index=14, to_signal_index=14, argv=0xbff5b128) at kernel/qobject.cpp:3108
#35 0xb68ab0e2 in QMetaObject::activate (sender=0x9e8d130, m=0x80c6b30, local_signal_index=10, argv=0xbff5b128) at kernel/qobject.cpp:3185
#36 0xb7da3dcd in KDirLister::itemsAdded (this=0x9e8d130, _t1=@0x9fb0b50, _t2=@0x9fb0b58) at /home/archuser/kdesvn/build/kdelibs/kio/kdirlister.moc:268
#37 0xb7da54d1 in KDirLister::Private::emitItems (this=0x9e84ce0) at /home/archuser/kdesvn/kdelibs/kio/kio/kdirlister.cpp:2303
#38 0xb7daa5b2 in KDirListerCache::slotEntries (this=0x9e3a838, job=0x9e7cdf8, entries=@0xbff5b5a4) at /home/archuser/kdesvn/kdelibs/kio/kio/kdirlister.cpp:1096
#39 0xb7db36c6 in KDirListerCache::qt_metacall (this=0x9e3a838, _c=QMetaObject::InvokeMetaMethod, _id=7, _a=0xbff5b378) at /home/archuser/kdesvn/build/kdelibs/kio/kdirlister_p.moc:98
#40 0xb68aab08 in QMetaObject::activate (sender=0x9e7cdf8, from_signal_index=40, to_signal_index=40, argv=0xbff5b378) at kernel/qobject.cpp:3108
#41 0xb68ab0e2 in QMetaObject::activate (sender=0x9e7cdf8, m=0xb7f310c0, local_signal_index=0, argv=0xbff5b378) at kernel/qobject.cpp:3185
#42 0xb7d812f7 in KIO::ListJob::entries (this=0x9e7cdf8, _t1=0x9e7cdf8, _t2=@0xbff5b5a4) at /home/archuser/kdesvn/build/kdelibs/kio/jobclasses.moc:781
#43 0xb7d8ad25 in KIO::ListJobPrivate::slotListEntries (this=0x9fb6870, list=@0xbff5b5a4) at /home/archuser/kdesvn/kdelibs/kio/kio/job.cpp:2347
#44 0xb7d8b082 in KIO::ListJob::qt_metacall (this=0x9e7cdf8, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0xbff5b50c) at /home/archuser/kdesvn/build/kdelibs/kio/jobclasses.moc:767
#45 0xb68aab08 in QMetaObject::activate (sender=0x9f4b988, from_signal_index=10, to_signal_index=10, argv=0xbff5b50c) at kernel/qobject.cpp:3108
#46 0xb68ab0e2 in QMetaObject::activate (sender=0x9f4b988, m=0xb7f33c84, local_signal_index=6, argv=0xbff5b50c) at kernel/qobject.cpp:3185
#47 0xb7e41482 in KIO::SlaveInterface::listEntries (this=0x9f4b988, _t1=@0xbff5b5a4) at /home/archuser/kdesvn/build/kdelibs/kio/slaveinterface.moc:179
#48 0xb7e4341e in KIO::SlaveInterface::dispatch (this=0x9f4b988, _cmd=106, rawdata=@0xbff5b674) at /home/archuser/kdesvn/kdelibs/kio/kio/slaveinterface.cpp:193
#49 0xb7e43226 in KIO::SlaveInterface::dispatch (this=0x9f4b988) at /home/archuser/kdesvn/kdelibs/kio/kio/slaveinterface.cpp:91
#50 0xb7e36c90 in KIO::Slave::gotInput (this=0x9f4b988) at /home/archuser/kdesvn/kdelibs/kio/kio/slave.cpp:322
#51 0xb7e3810a in KIO::Slave::qt_metacall (this=0x9f4b988, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0xbff5b778) at /home/archuser/kdesvn/build/kdelibs/kio/slave.moc:76
#52 0xb68aab08 in QMetaObject::activate (sender=0x9e7c308, from_signal_index=4, to_signal_index=4, argv=0x0) at kernel/qobject.cpp:3108
#53 0xb68ab0e2 in QMetaObject::activate (sender=0x9e7c308, m=0xb7f305c0, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3185
#54 0xb7d536fb in KIO::Connection::readyRead (this=0x9e7c308) at /home/archuser/kdesvn/build/kdelibs/kio/connection.moc:86
#55 0xb7d54695 in KIO::ConnectionPrivate::dequeue (this=0x9e7f4c0) at /home/archuser/kdesvn/kdelibs/kio/kio/connection.cpp:82
#56 0xb7d555cf in KIO::Connection::qt_metacall (this=0x9e7c308, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0x9f038d0) at /home/archuser/kdesvn/build/kdelibs/kio/connection.moc:73
#57 0xb68a5cdb in QMetaCallEvent::placeMetaCall (this=0x9f04ba0, object=0x9e7c308) at kernel/qobject.cpp:489
#58 0xb68a7a50 in QObject::event (this=0x9e7c308, e=0x9f04ba0) at kernel/qobject.cpp:1106
#59 0xb6a870cc in QApplicationPrivate::notify_helper (this=0x9d4c978, receiver=0x9e7c308, e=0x9f04ba0) at kernel/qapplication.cpp:4057
#60 0xb6a8fa6e in QApplication::notify (this=0xbff5bef0, receiver=0x9e7c308, e=0x9f04ba0) at kernel/qapplication.cpp:3604
#61 0xb761523d in KApplication::notify (this=0xbff5bef0, receiver=0x9e7c308, event=0x9f04ba0) at /home/archuser/kdesvn/kdelibs/kdeui/kernel/kapplication.cpp:307
#62 0xb689852b in QCoreApplication::notifyInternal (this=0xbff5bef0, receiver=0x9e7c308, event=0x9f04ba0) at kernel/qcoreapplication.cpp:606
#63 0xb6898e53 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x9d14998) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:213
#64 0xb6898fed in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1140
#65 0xb68c024f in postEventSourceDispatch (s=0x9d4c588) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:218
#66 0xb6048718 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#67 0xb604bc7b in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#68 0xb604bdf8 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#69 0xb68bfea8 in QEventDispatcherGlib::processEvents (this=0x9d4c2c0, flags={i = -1074414104}) at kernel/qeventdispatcher_glib.cpp:324
#70 0xb6b17155 in QGuiEventDispatcherGlib::processEvents (this=0x9d4c2c0, flags={i = -1074414056}) at kernel/qguieventdispatcher_glib.cpp:202
#71 0xb6896cca in QEventLoop::processEvents (this=0xbff5be80, flags={i = -1074413992}) at kernel/qeventloop.cpp:149
#72 0xb6896e8a in QEventLoop::exec (this=0xbff5be80, flags={i = -1074413944}) at kernel/qeventloop.cpp:196
#73 0xb68990b1 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#74 0xb6a86f47 in QApplication::exec () at kernel/qapplication.cpp:3526
#75 0x0807b630 in main (argc=5, argv=0xbff5c0a4) at /home/archuser/kdesvn/kdebase/apps/dolphin/src/main.cpp:94
Comment 13 Dario Andres 2009-05-25 19:36:59 UTC
@Dmitry Suzdalev: are you still getting this crash? What dates does that files have? Could you help doing some debug ? Thanks
Comment 14 Dmitry Suzdalev 2009-05-25 21:54:05 UTC
No it has been fixed in trunk some time ago. works OK now, I guess this bug can be closed once again :)
Comment 15 Dario Andres 2009-05-25 22:00:27 UTC
Thanks for updating the bug status. Marking as FIXED