fixed crash when enabling grouping by date and having dates like 30 December 2008 (is "Week 1" (of 2009 , but for 2008 too)) 28 December 2008 (is "Week 52" (of 2008) )

Thanks to Darío Andrés for the patch!

BUG: 179019

svn path=/trunk/KDE/kdebase/apps/; revision=903432